--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,7 @@
 
 .ns-awesome-gallery {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  flex-wrap: wrap; }
   .ns-awesome-gallery .like-icon {
     height: 14px;
     vertical-align: top; }
