--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,6 +48,17 @@
         background-color: rgba(0,0,0,0.1);
       }
 
+      .ns-gallery-photo-num {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 5px 10px;
+        background-color: rgba(255, 70, 0, 0.8);
+        -webkit-border-radius: 4px 0 4px 0;
+        -moz-border-radius: 4px 0 4px 0;
+        border-radius: 4px 0 4px 0;
+      }
+
       .ns-gallery-photo-likes {
         background-color: rgba(0,0,0,0.7);
         padding: 10px 15px;
@@ -90,6 +101,15 @@
 
   .like-icon {
     height: 16px;
+  }
+
+  .ns-gallery-photo-num {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 12px 15px;
+    background-color: rgba(255, 70, 0, 0.8);
+    color: #ffffff;
   }
 
   .ns-gallery-photo-description {
